--- a/views/pagos/abm_bancos.html
+++ b/views/pagos/abm_bancos.html
@@ -1,6 +1,6 @@
 {{extend 'layout.html'}}
 <h1>{{=grilla}}</h1>
-<form class="form-horizontal" action="{{=URL(c="pagos", f="abm_bancos_guardar")}}" method="POST">
+<form class="form-horizontal" action="{{=URL(c="pagos", f="abm_bancos")}}" method="POST">
   <div class="form-group ">
     <label for="banco" class="col-sm-2 control-label">Banco</label>
     <div class="col-sm-3">
@@ -15,7 +15,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Guardar</button>
+      <input type="submit" name="boton_guardar" class="btn btn-default" value="Guardar">
     </div>
   </div>
 </form>
