Mas ejemplos desarrollados en clase

--- a/views/ventas/guardado.html
+++ b/views/ventas/guardado.html
@@ -4,7 +4,7 @@
 <div class="form-group">
      <div class="col-sm-6"></div>
      <div class="col-sm-1">
-         <a href="{{=URL(c="ventas",f="abm_ventas")}}" class="btn btn-default" role="button">Aceptar</a>
+         <a href="{{=URL(c="ventas",f="vista_previa", args=[id_venta])}}" class="btn btn-default" role="button">Vista Previa</a>
     </div>
     <div class="col-sm-5"></div>
 </div>
