--- a/views/ventas/confirmar.html
+++ b/views/ventas/confirmar.html
@@ -1,9 +1,10 @@
 {{extend 'layout.html'}}
 <h1 align="center">CONFIRMAR</h1>
-<h4 align="center"> Confirmar venta para ZIA- Ivan Zavala, N° Comprobante 0001, por el importe de $4199</h4>
+<h4 align="center"> Confirmar venta para {{=reg_cliente.razon_social}}, N° Comprobante {{=nro_cbte}}, por el importe de $ {{=total}}</h4>
 <div class="form-group">
     <div class="col-sm-5"></div>
      <div class="col-sm-1">
-         <a href="{{=URL(c="ventas",f="vista_previa")}}" class="btn btn-default" role="button">ACEPTAR</a>
+         <a href="{{=URL(c="ventas",f="guardado")}}" class="btn btn-default" role="button">ACEPTAR</a>
+         <a href="{{=URL(c="ventas",f="detalle_ventas")}}" class="btn btn-default" role="button">Volver</a>
      </div>
 </div>
