--- a/views/ventas/detalle_ventas.html
+++ b/views/ventas/detalle_ventas.html
@@ -29,6 +29,8 @@
              <input type="submit" name="agregar_item" class="btn btn-default" value="AGREGAR ITEM">
         </div>
     </div>
+</form>
+<form class="form-horizontal" action="{{=URL(c="ventas", f="confirmar")}}" enctype="multipart/form-data" method="POST">
     <div class="form-group">
         <div class="col-md-10">
           <table class="table table-hover">
@@ -75,7 +77,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-1">
-           <button type="submit" class="btn btn-default">ACEPTAR</button>
+           <input type="submit" class="btn btn-default" value="Confirmar">
         </div>
      </div>
 </form>
