--- a/views/compra/informe_subdiarioa.html
+++ b/views/compra/informe_subdiarioa.html
@@ -13,6 +13,25 @@
       <input type="date" class="form-control" id="hasta" name="fecha_hasta" placeholder="">
     </div>
   </div>
+ 
+    <div class="form-group">
+        <label for="cant" class="col-sm-2 control-label">Proveedor</label>
+        <div class="col-sm-3">
+                <select class="form-control" id="cant">
+                  <option>REX</option>
+                  <option>CompuLiderSA</option>
+                </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="cant" class="col-sm-2 control-label">Condición Frente al IVA</label>
+        <div class="col-sm-3">
+                <select class="form-control" id="cant">
+                  <option>Consumidor Final</option>
+                  <option>Responzable Inscripto</option>
+                </select>
+        </div>
+    </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <div class="checkbox">
