--- a/views/compra/informe_subdiariob.html
+++ b/views/compra/informe_subdiariob.html
@@ -30,9 +30,7 @@
             <th>Fecha</th>
             <th>ID Proveedor</th>
             <th>N°Factura</th>
-            <th>Cantidad</th>
-            <th>Insumo</th>
-            <th>Precio Unitario</th>
+            <th>CUIT</th>
             <th>Subtotal</th>
             <th>IVA</th>
             <th>Total</th>
@@ -44,9 +42,7 @@
                 <td>1/9/2016</td>
                 <td>1</td>
                 <td>00001</td>
-                <td>10 u.</td>
-                <td>Producto</td>
-                <td>$ 30</td>
+                <td>$ 30-23456789-2</td>
                 <td>$ 300</td>
                 <td>$ 30</td>
                 <td>$ 330</td>
@@ -55,9 +51,7 @@
                 <td>1/9/2016</td>
                 <td>05</td> 
                 <td>00002</td>
-                <td>10 u.</td>
-                <td>Producto</td>
-                <td>$ 30</td>
+               	<td>$ 30-89098765-2</td>
                 <td>$ 300</td>
                 <td>$ 63</td>
                 <td>$ 363</td>
@@ -67,9 +61,7 @@
                 <td>1/9/2016</td>
                 <td>34</td> 
                 <td>00003</td>
-                <td>10 u.</td>
-                <td>Producto</td>
-                <td>$ 30</td>
+                <td>$ 3087876543-4</td>
                 <td>$ 300</td>
                 <td>$ 63</td>
                 <td>$ 363</td>
@@ -79,9 +71,7 @@
                 <td>1/9/2016</td>
                 <td>45</td> 
                 <td>00004</td>
-                <td>10 u.</td>
-                <td>Producto</td>
-                <td>$ 30</td>
+                <td>$ 30-90876765-5</td>
                 <td>$ 300</td>
                 <td>$ 63</td>
                 <td>$ 363</td>
@@ -91,72 +81,25 @@
                 <td>1/9/2016</td>
                 <td>86</td> 
                 <td>00005</td>
-                <td>10 u.</td>
-                <td>Producto</td>
-                <td>$ 30</td>
+                <td>$ 30-87098678-9</td>
                 <td>$ 300</td>
                 <td>$ 63</td>
                 <td>$ 363</td>
         </tr>
-                <tr> 
-            <th scope="row">6</th> 
-                <td>1/9/2016</td>
-                <td>98</td> 
-                <td>00006</td>
-                <td>10 u.</td>
-                <td>Producto</td>
-                <td>$ 30</td>
-                <td>$ 300</td>
-                <td>$ 63</td>
-                <td>$ 363</td>
-        </tr>
-                <tr> 
-            <th scope="row">7</th> 
-                <td>1/9/2016</td>
-                <td>83</td> 
-                <td>00007</td>
-                <td>10 u.</td>
-                <td>Producto</td>
-                <td>$ 30</td>
-                <td>$ 300</td>
-                <td>$ 63</td>
-                <td>$ 363</td>
-        </tr>
-                <tr> 
-            <th scope="row">8</th> 
-                <td>1/9/2016</td>
-                <td>38</td> 
-                <td>00008</td>
-                <td>10 u.</td>
-                <td>Producto</td>
-                <td>$ 30</td>
-                <td>$ 300</td>
-                <td>$ 63</td>
-                <td>$ 363</td>
-            </tr>
-                <tr> 
-            <th scope="row">9</th> 
-                <td>1/9/2016</td>
-                <td>75</td> 
-                <td>00009</td>
-                <td>10 u.</td>
-                <td>Producto</td>
-                <td>$ 30</td>
-                <td>$ 300</td>
-                <td>$ 63</td>
-                <td>$ 363</td>
-            </tr>
-                <tr> 
-            <th scope="row">10</th> 
-                <td>1/9/2016</td>
-                <td>87</td> 
-                <td>00010</td>
-                <td>10 u.</td>
-                <td>Producto</td>
-                <td>$ 30</td>
-                <td>$ 300</td>
-                <td>$ 63</td>
-                <td>$ 363</td>
-        </tr>
+    <div class="form-group" class="col-sm-2">
+    <div class="col-md-3">
+       <table class="table table-bordered">
+           <tbody>
+               <tr> <th scope="row">Cantidad de Compras</th>
+		    <center>
+                    <td>5</td>
+               </tr>
+               <tr> <th scope="row">Valor total </th>
+                    <td>1782</td>
+               </tr>
+            </tbody>
+        </table>
+    </div>
+    </div>
        </tbody>
 </table>
