Ver orden de pago

--- a/views/pagos/alta_cheques.html
+++ b/views/pagos/alta_cheques.html
@@ -1,5 +1,5 @@
 {{extend 'layout.html'}}
 <h1>{{=grilla}}</h1>
-<form class="form-horizontal" action="{{=URL(c="pagos", f="abm_cheques")}}" method="POST">
+<form class="form-horizontal" action="{{=URL(c="pagos", f="alta_cheques")}}" method="POST">
   {{=form}}
 </form>
