--- a/views/pagos/reporte_pagos.html
+++ b/views/pagos/reporte_pagos.html
@@ -3,11 +3,12 @@
     <caption>{{=titulo}}</caption>
     <thead>
         <tr>
-            <th>Numero de Orden de Pago</th> <th>Fecha</th> <th>Importe</th> <th>Razon Social</th>
+            <th>Numero de Orden de Pago</th> <th>Fecha</th> <th>Importe</th> <th>Razon Social</th> <th>Ver Orden de Pago</th>
         </tr>
     </thead>
     <tbody>
         {{for registro in registros:}}
-        <tr> <td>{{=registro.num_orden_pago}}</td> <td>{{=registro.fecha}}</td> <td>{{=registro.importe}}</td> <td>{{=registro.id_proveedor.razon_social}}</td> </tr>{{pass}}
+        <tr> <td>{{=registro.num_orden_pago}}</td> <td>{{=registro.fecha}}</td> <td>{{=registro.importe}}</td> <td>{{=registro.id_proveedor.razon_social}}</td> <td><a class="btn btn-default" role="button" href="{{=URL(c="pagos",f="ver_orden_pago",vars={"id":registro.num_orden_pago})}}">Ver</a></td></tr>
+        {{pass}}
     </tbody>
 </table>
