--- a/views/pagos/alta_cuenta_bancaria.html
+++ b/views/pagos/alta_cuenta_bancaria.html
@@ -1,5 +1,5 @@
 {{extend 'layout.html'}}
 <h1>{{=grilla}}</h1>
-<form class="form-horizontal" action="{{=URL(c="pagos", f="abm_cuenta_bancaria")}}" method="POST">
+<form class="form-horizontal" action="{{=URL(c="pagos", f="alta_cuenta_bancaria")}}" method="POST">
   {{=form}}
 </form>
