--- a/views/pagos/generar_reporte.html
+++ b/views/pagos/generar_reporte.html
@@ -1,5 +1,5 @@
 {{extend 'layout.html'}}
-<h1>{{=message}} Por fechas</h1>
+<h1>{{=message}}</h1>
 
 <form class="form-horizontal" action="{{=URL(c="pagos", f="reporte_pagos")}}" method="POST">
   <div class="form-group ">
@@ -25,7 +25,21 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Generar Reporte</button>
+      <input type="submit" class="btn btn-default" value="Generar Reporte" name="reporte_fecha">
+    </div>
+  </div>
+</form>
+<!-- Buscar por nombre -->
+<form class="form-horizontal" action="{{=URL(c="pagos", f="reporte_pagos")}}" method="POST">
+  <div class="form-group ">
+    <label for="nombre_proveedor" class="col-sm-2 control-label">Nombre de Proveedor</label>
+    <div class="col-sm-2">
+      <input type="text" class="form-control" id="nombre_proveedor" name="nombre_proveedor" placeholder="Nombre Proveedor">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <input type="submit" class="btn btn-default" value="Generar Reporte" name="reporte_nombre">
     </div>
   </div>
 </form>
